--- a/homeworkMS/src/main/resources/upload.properties
+++ b/homeworkMS/src/main/resources/upload.properties
@@ -1,2 +1,4 @@
-uploadPath = F:\\Personal\\homeworkMS\\server\\files
+#uploadPath = F:\\Personal\\homeworkMS\\server\\files
 tempPath = F:\\Personal\\homeworkMS\\server\\files\\temp
+
+uploadPath = C:\\Project\\homeworkMS\\server\\files
